Compilador-Isidrol/ProjetoCompiladores/IsicompParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\Isicomp.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class IsicompParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, FORMAT=11, ID=12, OPER_TER=13, OPER_FAT=14, PONTUACAO=15, NUM=16, 
		OPE_RELAC=17, DIGIT=18, LETTER=19, T_NULL=20, T_STRING=21, T_INT=22, T_FLOAT=23, 
		T_SOMA=24, T_SUBT=25, T_DIV=26, T_MULT=27, T_MAIOR=28, T_MENOR=29, T_IGUAL=30, 
		T_COMMA=31, T_APARENT=32, T_FPARENT=33, T_ASPAS=34, T_DOT=35, T_UNDERS=36, 
		T_ACHAVE=37, T_FCHAVE=38, T_MAIOR_IGUAL=39, T_MENOR_IGUAL=40, T_IGUAL_RELAC=41, 
		T_DIF=42, WS=43;
	public const int
		RULE_programa = 0, RULE_declare = 1, RULE_blococomando = 2, RULE_comando = 3, 
		RULE_exp_ter = 4, RULE_exp_fat = 5, RULE_exp_relacional = 6, RULE_termo = 7, 
		RULE_se = 8, RULE_atribua = 9, RULE_escreva = 10, RULE_leia = 11, RULE_enquanto = 12, 
		RULE_faca = 13, RULE_string = 14;
	public static readonly string[] ruleNames = {
		"programa", "declare", "blococomando", "comando", "exp_ter", "exp_fat", 
		"exp_relacional", "termo", "se", "atribua", "escreva", "leia", "enquanto", 
		"faca", "string"
	};

	private static readonly string[] _LiteralNames = {
		null, "'programa'", "'fimprog'", "'declare'", "'se'", "'entao'", "'senao'", 
		"'escreva'", "'leia'", "'enquanto'", "'faca'", null, null, null, null, 
		null, null, null, null, null, "'nulo'", "'string'", "'int'", "'float'", 
		"'+'", "'-'", "'/'", "'*'", "'>'", "'<'", "':='", "','", "'('", "')'", 
		"'\"'", "'.'", "'_'", "'{'", "'}'", "'>='", "'<='", "'=='", "'!='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, "FORMAT", 
		"ID", "OPER_TER", "OPER_FAT", "PONTUACAO", "NUM", "OPE_RELAC", "DIGIT", 
		"LETTER", "T_NULL", "T_STRING", "T_INT", "T_FLOAT", "T_SOMA", "T_SUBT", 
		"T_DIV", "T_MULT", "T_MAIOR", "T_MENOR", "T_IGUAL", "T_COMMA", "T_APARENT", 
		"T_FPARENT", "T_ASPAS", "T_DOT", "T_UNDERS", "T_ACHAVE", "T_FCHAVE", "T_MAIOR_IGUAL", 
		"T_MENOR_IGUAL", "T_IGUAL_RELAC", "T_DIF", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Isicomp.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static IsicompParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public IsicompParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public IsicompParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramaContext : ParserRuleContext {
		public DeclareContext declare() {
			return GetRuleContext<DeclareContext>(0);
		}
		public BlococomandoContext blococomando() {
			return GetRuleContext<BlococomandoContext>(0);
		}
		public ITerminalNode T_DOT() { return GetToken(IsicompParser.T_DOT, 0); }
		public ITerminalNode[] WS() { return GetTokens(IsicompParser.WS); }
		public ITerminalNode WS(int i) {
			return GetToken(IsicompParser.WS, i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programa; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.EnterPrograma(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.ExitPrograma(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsicompVisitor<TResult> typedVisitor = visitor as IIsicompVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrograma(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramaContext programa() {
		ProgramaContext _localctx = new ProgramaContext(Context, State);
		EnterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 30; Match(T__0);
			State = 32;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WS) {
				{
				State = 31; Match(WS);
				}
			}

			State = 34; declare();
			State = 36;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WS) {
				{
				State = 35; Match(WS);
				}
			}

			State = 38; blococomando();
			State = 40;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WS) {
				{
				State = 39; Match(WS);
				}
			}

			State = 42; Match(T__1);
			State = 43; Match(T_DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclareContext : ParserRuleContext {
		public ITerminalNode[] ID() { return GetTokens(IsicompParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(IsicompParser.ID, i);
		}
		public ITerminalNode T_DOT() { return GetToken(IsicompParser.T_DOT, 0); }
		public ITerminalNode WS() { return GetToken(IsicompParser.WS, 0); }
		public ITerminalNode[] T_COMMA() { return GetTokens(IsicompParser.T_COMMA); }
		public ITerminalNode T_COMMA(int i) {
			return GetToken(IsicompParser.T_COMMA, i);
		}
		public DeclareContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declare; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.EnterDeclare(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.ExitDeclare(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsicompVisitor<TResult> typedVisitor = visitor as IIsicompVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclare(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclareContext declare() {
		DeclareContext _localctx = new DeclareContext(Context, State);
		EnterRule(_localctx, 2, RULE_declare);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45; Match(T__2);
			State = 47;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WS) {
				{
				State = 46; Match(WS);
				}
			}

			State = 49; Match(ID);
			State = 54;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T_COMMA) {
				{
				{
				State = 50; Match(T_COMMA);
				State = 51; Match(ID);
				}
				}
				State = 56;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 57; Match(T_DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlococomandoContext : ParserRuleContext {
		public ComandoContext[] comando() {
			return GetRuleContexts<ComandoContext>();
		}
		public ComandoContext comando(int i) {
			return GetRuleContext<ComandoContext>(i);
		}
		public BlococomandoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_blococomando; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.EnterBlococomando(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.ExitBlococomando(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsicompVisitor<TResult> typedVisitor = visitor as IIsicompVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlococomando(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlococomandoContext blococomando() {
		BlococomandoContext _localctx = new BlococomandoContext(Context, State);
		EnterRule(_localctx, 4, RULE_blococomando);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 59; comando();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 62;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ComandoContext : ParserRuleContext {
		public LeiaContext leia() {
			return GetRuleContext<LeiaContext>(0);
		}
		public EscrevaContext escreva() {
			return GetRuleContext<EscrevaContext>(0);
		}
		public AtribuaContext atribua() {
			return GetRuleContext<AtribuaContext>(0);
		}
		public SeContext se() {
			return GetRuleContext<SeContext>(0);
		}
		public EnquantoContext enquanto() {
			return GetRuleContext<EnquantoContext>(0);
		}
		public FacaContext faca() {
			return GetRuleContext<FacaContext>(0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comando; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.EnterComando(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.ExitComando(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsicompVisitor<TResult> typedVisitor = visitor as IIsicompVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComando(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ComandoContext comando() {
		ComandoContext _localctx = new ComandoContext(Context, State);
		EnterRule(_localctx, 6, RULE_comando);
		try {
			State = 70;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__7:
				EnterOuterAlt(_localctx, 1);
				{
				State = 64; leia();
				}
				break;
			case T__6:
				EnterOuterAlt(_localctx, 2);
				{
				State = 65; escreva();
				}
				break;
			case ID:
				EnterOuterAlt(_localctx, 3);
				{
				State = 66; atribua();
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 4);
				{
				State = 67; se();
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 5);
				{
				State = 68; enquanto();
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 6);
				{
				State = 69; faca();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Exp_terContext : ParserRuleContext {
		public Exp_fatContext[] exp_fat() {
			return GetRuleContexts<Exp_fatContext>();
		}
		public Exp_fatContext exp_fat(int i) {
			return GetRuleContext<Exp_fatContext>(i);
		}
		public ITerminalNode[] OPER_TER() { return GetTokens(IsicompParser.OPER_TER); }
		public ITerminalNode OPER_TER(int i) {
			return GetToken(IsicompParser.OPER_TER, i);
		}
		public Exp_terContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exp_ter; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.EnterExp_ter(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.ExitExp_ter(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsicompVisitor<TResult> typedVisitor = visitor as IIsicompVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExp_ter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Exp_terContext exp_ter() {
		Exp_terContext _localctx = new Exp_terContext(Context, State);
		EnterRule(_localctx, 8, RULE_exp_ter);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72; exp_fat();
			State = 77;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==OPER_TER) {
				{
				{
				State = 73; Match(OPER_TER);
				State = 74; exp_fat();
				}
				}
				State = 79;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Exp_fatContext : ParserRuleContext {
		public ITerminalNode NUM() { return GetToken(IsicompParser.NUM, 0); }
		public ITerminalNode[] OPER_FAT() { return GetTokens(IsicompParser.OPER_FAT); }
		public ITerminalNode OPER_FAT(int i) {
			return GetToken(IsicompParser.OPER_FAT, i);
		}
		public TermoContext[] termo() {
			return GetRuleContexts<TermoContext>();
		}
		public TermoContext termo(int i) {
			return GetRuleContext<TermoContext>(i);
		}
		public Exp_fatContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exp_fat; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.EnterExp_fat(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.ExitExp_fat(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsicompVisitor<TResult> typedVisitor = visitor as IIsicompVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExp_fat(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Exp_fatContext exp_fat() {
		Exp_fatContext _localctx = new Exp_fatContext(Context, State);
		EnterRule(_localctx, 10, RULE_exp_fat);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80; Match(NUM);
			State = 85;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==OPER_FAT) {
				{
				{
				State = 81; Match(OPER_FAT);
				State = 82; termo();
				}
				}
				State = 87;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Exp_relacionalContext : ParserRuleContext {
		public ITerminalNode OPE_RELAC() { return GetToken(IsicompParser.OPE_RELAC, 0); }
		public ITerminalNode[] ID() { return GetTokens(IsicompParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(IsicompParser.ID, i);
		}
		public ITerminalNode[] NUM() { return GetTokens(IsicompParser.NUM); }
		public ITerminalNode NUM(int i) {
			return GetToken(IsicompParser.NUM, i);
		}
		public Exp_relacionalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exp_relacional; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.EnterExp_relacional(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.ExitExp_relacional(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsicompVisitor<TResult> typedVisitor = visitor as IIsicompVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExp_relacional(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Exp_relacionalContext exp_relacional() {
		Exp_relacionalContext _localctx = new Exp_relacionalContext(Context, State);
		EnterRule(_localctx, 12, RULE_exp_relacional);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88;
			_la = TokenStream.LA(1);
			if ( !(_la==ID || _la==NUM) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 89; Match(OPE_RELAC);
			State = 90;
			_la = TokenStream.LA(1);
			if ( !(_la==ID || _la==NUM) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TermoContext : ParserRuleContext {
		public ITerminalNode NUM() { return GetToken(IsicompParser.NUM, 0); }
		public ITerminalNode ID() { return GetToken(IsicompParser.ID, 0); }
		public ITerminalNode T_APARENT() { return GetToken(IsicompParser.T_APARENT, 0); }
		public Exp_terContext exp_ter() {
			return GetRuleContext<Exp_terContext>(0);
		}
		public ITerminalNode T_FPARENT() { return GetToken(IsicompParser.T_FPARENT, 0); }
		public TermoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_termo; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.EnterTermo(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.ExitTermo(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsicompVisitor<TResult> typedVisitor = visitor as IIsicompVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTermo(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TermoContext termo() {
		TermoContext _localctx = new TermoContext(Context, State);
		EnterRule(_localctx, 14, RULE_termo);
		try {
			State = 98;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case NUM:
				EnterOuterAlt(_localctx, 1);
				{
				State = 92; Match(NUM);
				}
				break;
			case ID:
				EnterOuterAlt(_localctx, 2);
				{
				State = 93; Match(ID);
				}
				break;
			case T_APARENT:
				EnterOuterAlt(_localctx, 3);
				{
				State = 94; Match(T_APARENT);
				State = 95; exp_ter();
				State = 96; Match(T_FPARENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SeContext : ParserRuleContext {
		public ITerminalNode T_APARENT() { return GetToken(IsicompParser.T_APARENT, 0); }
		public Exp_relacionalContext exp_relacional() {
			return GetRuleContext<Exp_relacionalContext>(0);
		}
		public ITerminalNode T_FPARENT() { return GetToken(IsicompParser.T_FPARENT, 0); }
		public BlococomandoContext[] blococomando() {
			return GetRuleContexts<BlococomandoContext>();
		}
		public BlococomandoContext blococomando(int i) {
			return GetRuleContext<BlococomandoContext>(i);
		}
		public SeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_se; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.EnterSe(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.ExitSe(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsicompVisitor<TResult> typedVisitor = visitor as IIsicompVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSe(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SeContext se() {
		SeContext _localctx = new SeContext(Context, State);
		EnterRule(_localctx, 16, RULE_se);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100; Match(T__3);
			State = 101; Match(T_APARENT);
			State = 102; exp_relacional();
			State = 103; Match(T_FPARENT);
			State = 104; Match(T__4);
			State = 105; blococomando();
			State = 109;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				{
				State = 106; Match(T__5);
				State = 107; Match(T__4);
				State = 108; blococomando();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtribuaContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(IsicompParser.ID, 0); }
		public ITerminalNode T_IGUAL() { return GetToken(IsicompParser.T_IGUAL, 0); }
		public Exp_terContext exp_ter() {
			return GetRuleContext<Exp_terContext>(0);
		}
		public ITerminalNode T_DOT() { return GetToken(IsicompParser.T_DOT, 0); }
		public AtribuaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atribua; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.EnterAtribua(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.ExitAtribua(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsicompVisitor<TResult> typedVisitor = visitor as IIsicompVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAtribua(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AtribuaContext atribua() {
		AtribuaContext _localctx = new AtribuaContext(Context, State);
		EnterRule(_localctx, 18, RULE_atribua);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111; Match(ID);
			State = 112; Match(T_IGUAL);
			State = 113; exp_ter();
			State = 114; Match(T_DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EscrevaContext : ParserRuleContext {
		public ITerminalNode T_APARENT() { return GetToken(IsicompParser.T_APARENT, 0); }
		public ITerminalNode T_FPARENT() { return GetToken(IsicompParser.T_FPARENT, 0); }
		public ITerminalNode T_DOT() { return GetToken(IsicompParser.T_DOT, 0); }
		public ITerminalNode ID() { return GetToken(IsicompParser.ID, 0); }
		public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		public EscrevaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_escreva; } }
		public override void EnterRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.EnterEscreva(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IIsicompListener typedListener = listener as IIsicompListener;
			if (typedListener != null) typedListener.ExitEscreva(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IIsicompVisitor<TResult> typedVisitor = visitor as IIsicompVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEscreva(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EscrevaContext escreva() {
		EscrevaContext _localctx = new EscrevaContext(Context, State);
		EnterRule(_localctx, 20, RULE_escreva);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116; Match(T__6);
			State = 117; Match(T_APARENT);
			State = 120;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ID:
				{
				State = 118; Match(ID);
				}
				break;
			case T_ASPAS:
				{
				State = 119; @string();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 122; Match(T_FPARENT);
			State = 123; Match(T_DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
